Fix overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,8 @@ body {
     width: 100%;
     height: 100%;
     position: relative;
+    overflow-x: hidden;
+    -ms-overflow-x: hidden;
 }
 
 .rail {
